--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,14 +1,44 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>Web Demo</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Travelie login</title>
+  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="icon" href="http://www.pngmart.com/files/4/Travel-Transparent-PNG.png">
 </head>
 <body>
-<p>Say <a href="hello">Hello</a></p> 
 
-<form method="post" action="hello">  
-  <h2>Name:</h2>
-  <input type="text" id="say-hello-text-input" name="name" />
-  <input type="submit" id="say-hello-button" value="Say Hello" />
-</form>
+<div class="wrap">
+<div class="container">
+  <div class="background"></div>
+  <div class="logoDiv">
+    <img src="http://www.pngmart.com/files/4/Travel-Transparent-PNG.png" alt="">
+    <div class="companyName">Travelie</div>
+  </div>
+  <form >
+  <div class="field">
+    <span class="label-input">Username</span>
+    <div class="smaller-field"> <i class="fa fa-user icon" style="position:relative; left:-1px;" aria-hidden="true"></i><input name ="username" type="text" placeholder="Enter your username"><br>
+      <span class="focus-border"></span>
+    </div>
+
+  </div>
+  <div class="field">
+    <span class="label-input">Password</span>
+    <div class="smaller-field">
+      <i class="fa fa-lock icon" aria-hidden="true"></i><input name ="password" placeholder="Enter your password"><br>
+      <span class="focus-border"></span>
+    </div>
+
+  </div>
+    </form>
+  <div id="submit">Submit</div>
+
+  <div class="forgotPassword"> Forgot your password?</div>
+</div>
+  </div>
 </body>
 </html>
