--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Travelie login</title>
   <link rel="stylesheet" href="index.css">
+  <script src="index.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" href="http://www.pngmart.com/files/4/Travel-Transparent-PNG.png">
 </head>
@@ -18,7 +19,7 @@
     <img src="http://www.pngmart.com/files/4/Travel-Transparent-PNG.png" alt="">
     <div class="companyName">Travelie</div>
   </div>
-  <form >
+  <form id="form">
   <div class="field">
     <span class="label-input">Username</span>
     <div class="smaller-field"> <i class="fa fa-user icon" style="position:relative; left:-1px;" aria-hidden="true"></i><input name ="username" type="text" placeholder="Enter your username"><br>
