--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,6 +7,7 @@
   <title>Travelie login</title>
   <link rel="stylesheet" href="index.css">
   <script src="index.js"></script>
+  <script src="index-background.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" href="http://www.pngmart.com/files/4/Travel-Transparent-PNG.png">
 </head>
