--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -11,7 +11,7 @@
   <link rel="icon" href="http://www.pngmart.com/files/4/Travel-Transparent-PNG.png">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="main.js"></script>
-  <link rel="shortcut icon" href="">
+  <link rel="shortcut icon" href="#">
 </head>
 
 <body>
