--- a/src/main/webapp/result.html
+++ b/src/main/webapp/result.html
@@ -13,6 +13,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="main.js"></script>
   <script src="result.js"></script>
+  <link rel="shortcut icon" href="favicon/favicon.ico">
+<link rel="icon" type="image/gif" href="favicon/animated_favicon1.gif">
 </head>
 
 <body>
