favicon fix try 3

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,8 +12,8 @@
   <script src="index-background.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" href="http://www.pngmart.com/files/4/Travel-Transparent-PNG.png">
-  <link rel="shortcut icon" href="favicon/favicon.ico">
-<link rel="icon" type="image/gif" href="favicon/animated_favicon1.gif">
+  <link rel="shortcut icon" href="">
+
 </head>
 <body>
 
