--- a/src/main/webapp/result.html
+++ b/src/main/webapp/result.html
@@ -9,12 +9,11 @@
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="result.css">
   <link rel="icon" href="http://www.pngmart.com/files/4/Travel-Transparent-PNG.png">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+ 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="main.js"></script>
   <script src="result.js"></script>
-  <link rel="shortcut icon" href="favicon/favicon.ico">
-<link rel="icon" type="image/gif" href="favicon/animated_favicon1.gif">
+  <link rel="shortcut icon" href="">
 </head>
 
 <body>
