--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -24,7 +24,7 @@
       </div>
       <div class="navButtonDiv">
         <div class="navButton">Sign in</div>
-        <div class="navButton">Join</div>
+        <div class="navButton random">Join</div>
       </div>
     </nav>
     <section class="section1">
