Continue without registering

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -42,7 +42,7 @@
     </form>
   <div id="submit">Submit</div>
 
-  <div class="forgotPassword"> Forgot your password?</div>
+ <div onClick="window.location='main.html';" class="forgotPassword">Continue without registering</div>
 </div>
   </div>
 </body>
