Clean up some code and add 2 fetch calls.
Fetch calls for posting city names and getting the recommendation list.

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,36 +15,38 @@
   <link rel="shortcut icon" href="">
 
 </head>
+
 <body>
 
-<div class="wrap">
-<div class="container">
-  <div class="background"></div>
-  <div class="logoDiv">
-    <img src="http://www.pngmart.com/files/4/Travel-Transparent-PNG.png" alt="">
-    <div class="companyName">Travelie</div>
-  </div>
-  <form id="form">
-  <div class="field">
-    <span class="label-input">Username</span>
-    <div class="smaller-field"> <i class="fa fa-user icon" style="position:relative; left:-1px;" aria-hidden="true"></i><input name ="username" type="text" placeholder="Enter your username"><br>
-      <span class="focus-border"></span>
+  <div class="wrap">
+    <div class="container">
+      <div class="background"></div>
+      <div class="logoDiv">
+        <img src="http://www.pngmart.com/files/4/Travel-Transparent-PNG.png" alt="">
+        <div class="companyName">Travelie</div>
+      </div>
+      <form id="form">
+        <div class="field">
+          <span class="label-input">Username</span>
+          <div class="smaller-field"> <i class="fa fa-user icon" style="position:relative; left:-1px;" aria-hidden="true"></i><input name="username" type="text" placeholder="Enter your username"><br>
+            <span class="focus-border"></span>
+          </div>
+
+        </div>
+        <div class="field">
+          <span class="label-input">Password</span>
+          <div class="smaller-field">
+            <i class="fa fa-lock icon" aria-hidden="true"></i><input name="password" placeholder="Enter your password"><br>
+            <span class="focus-border"></span>
+          </div>
+
+        </div>
+      </form>
+      <div id="submit">Submit</div>
+
+      <div onClick="window.location='index.html';" class="forgotPassword">Continue without registering</div>
     </div>
-
-  </div>
-  <div class="field">
-    <span class="label-input">Password</span>
-    <div class="smaller-field">
-      <i class="fa fa-lock icon" aria-hidden="true"></i><input name ="password" placeholder="Enter your password"><br>
-      <span class="focus-border"></span>
-    </div>
-
-  </div>
-    </form>
-  <div id="submit">Submit</div>
-
- <div onClick="window.location='main.html';" class="forgotPassword">Continue without registering</div>
-</div>
   </div>
 </body>
+
 </html>
