Add recommendation page
with fetch call for getting the recommend places and their images.

--- a/src/main/webapp/recommend.html
+++ b/src/main/webapp/recommend.html
@@ -5,13 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Travelie</title>
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="result.css">
   <link rel="icon" href="http://www.pngmart.com/files/4/Travel-Transparent-PNG.png">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="main.js"></script>
-  <script src="result.js"></script>
+  <title>Recommend places</title>
 </head>
 
 <body>
@@ -27,32 +26,20 @@
       </div>
     </nav>
 
-    <section class="resultSection" id="weatherSection">
-      <div class="resultTitle"></div>
-      <div class="weatherDisplay">
-      </div>
-    </section>
-
-    <section class="resultSection" id="activitySection">
-      <div class="resultTitle"> </div>
+    <section class="resultSection" id="recommendSection">
+      <div class="resultTitle">Top 10 Travelie vacation destinations</div>
       <div class="resultList">
+        <div class="result">
+          <div class="resultImg">
+            <img src="" alt="">
+          </div>
+          <div class="resultDetails">
+            <div class="name">${name}</div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
-
-    <section class="resultSection" id="restaurantSection">
-      <div class="resultTitle"> </div>
-      <div class="resultList">
-
-      </div>
-    </section>
-
-    <section class="resultSection" id="cafeSection">
-      <div class="resultTitle"> </div>
-      <div class="resultList">
-
-      </div>
-    </section>
-  </div>
 </body>
 
 </html>
